# TestHello

./: CMakeLists.txt
say-hello-dir/: CMakeLists.txt
say-hello-dir/src/: hello.cpp  hello.hpp
say-hello-exe-dir/: CMakeLists.txt  main.cpp
